cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "bevy_daw"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
assert_no_alloc = "1.1.2"
bevy = { version = "0.16.1", default-features = false }
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
heapless = "0.8.0"
spin = "0.10.0"

[dev-dependencies]
assert_no_alloc = "1.1.2"
criterion = { version = "0.6.0", features = ["html_reports"] }
hound = "3.5.1"
plotters = "0.3.7"
rustfft = "6.4.0"

[[bench]]
harness = false
name = "audio_nodes_benchmark"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "unwind"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8", "-Zshare-generics=y"]
