[package]
name = "bevy_daw"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
arc-swap = "1.7.1"
assert_no_alloc = "1.1.2"
bevy = { version = "0.16.1", default-features = false }
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
hashbrown = "0.15.4"
heapless = "0.8.0"
ringbuf = "0.4.8"
triple_buffer = "8.1.1"
